# pakman

./: .gitignore  README.md  actions.py  agent.py  blinky.py  clyde.py  config.py  environement.py  game.py  ghost.py  gui_pacman.py  inky.py  main.py  maps.py  metrics.py  pacman.py  pakman.py  pakman_game.py  pakman_window.py  pakman_windowless.py  pinky.py  position.py  pyproject.toml  qtable_pacman.py  state.py  tile.py  train.py  utils.py  world.py
agents/: dqlearn_pakman.py  qtable_pakman.py  type.py
core_game/: actions.py  agent.py  chase_behaviour.py  core_agent.py  directions.py  ghost.py  ghost_factory.py  pakman.py  position.py  scared_behaviour.py
creatures/: chase_behaviour.py  ghost.py  pakman.py  position.py  scared_behaviour.py
environment/: actions.py  environment.py  metrics.py  radars.py  state.py
game/: actions.py  directions.py  position.py
