[tool.poetry]
name = "pakman"
version = "0.1.0"
description = ""
authors = ["paulb <barrie.paul@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arcade = "^2.6.16"
numpy = "^1.23.3"
argmin = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
